--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "aws-lambda-multipart-parser": "^0.1.3",
     "aws-sdk": "^2.1633.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "esbuild": "^0.14.14",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
